[pom] Add modular support to javadocs to overcome maven bug when not full modular
maven javadoc compiler is long noted to have an issue with modular but maven team disputes it.  fix by making javadocs modular to get around the issue even though project is not.